# lvmc

./: .gitignore  README.md  configurations.py  pyproject.toml
sigma/: analysis.py  compute_xi_gap.py  extraction.ipynb  fit.py  fitting_widget.py  observables.py  sampling.py  sigma.ipynb  sigma.tex  submit  test.py  train.py  train_neighbors.py  training.py  training_example.ipynb  utils.py  wavefunction.py
sigma/tensor/: compute_xis.jl  grid_local.sh  imps.ipynb  imps.jl  imps_lmax.jl  run_one.jl
sigma/tensor/data/: g2_0.7_lmax_1_D_10.jld2
sigma/tensor/fv/: fvgor_excited.jl  fvgr_excited.jl  plot_corr.py
su2/: configurations.py  equivariant.py  test.py
