[project]
name = "lvmc"
version = "0.1.0"
description = "Lattice VMC using normalizing flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "flax>=0.12.2",
    "jax>=0.9.0.1",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "optax>=0.2.7",
    "plotly>=6.5.2",
]
